--- a/houston-web-design.html
+++ b/houston-web-design.html
@@ -667,232 +667,148 @@
     }
   </script>
 
-<script>
-  const canvas = document.getElementById("vapor");
-  const ctx = canvas.getContext("2d", { alpha:true });
+  <script>
+    const canvas = document.getElementById("vapor");
+    const ctx = canvas.getContext("2d", { alpha:true });
 
-  const buf = document.createElement("canvas");
-  const btx = buf.getContext("2d", { alpha:true });
+    // Offscreen buffer (we render the sim here, then blur-composite to main)
+    const buf = document.createElement("canvas");
+    const btx = buf.getContext("2d", { alpha:true });
 
-  const mqMobile = window.matchMedia("(max-width: 980px), (hover: none) and (pointer: coarse)");
-  let isMobile = mqMobile.matches;
-  mqMobile.addEventListener?.("change", (e) => {
-    isMobile = e.matches;
+    const S = {
+      w:0, h:0,
+      dpr: Math.max(1, Math.min(2, window.devicePixelRatio || 1)),
+      t:0,
+
+      // slow drift
+      speed: 0.0046,
+
+      // ✅ smoothness / pixel control
+      // Higher scale = less pixelation. We also blur composite, so this stays airy.
+      scale: 0.70,     // (0.65–0.85 recommended)
+      fade: 0.22,     // less fade = more presence
+        glow: 0.25,      // tiny bump (still subtle)
+    density: 0.66,   // stronger vapor overall
+
+      // across-screen band behavior
+      amp: 0.16,
+      drift: 0.16,
+      band: 0.16,
+      breakUp: 1.05,
+
+      // composite blur (kills pixel blocks)
+      blurBase: 10,    // main blur pass
+      blurDetail: 4,   // definition pass
+      blurGlow: 14,    // bloom pass
+
+      // mouse drift
+      mx:0, my:0, px:0, py:0
+    };
+
+    function resize(){
+      S.w = Math.floor(window.innerWidth);
+      S.h = Math.floor(window.innerHeight);
+
+      // Main canvas uses DPR for sharp UI layers
+      canvas.width  = Math.floor(S.w * S.dpr);
+      canvas.height = Math.floor(S.h * S.dpr);
+      canvas.style.width  = S.w + "px";
+      canvas.style.height = S.h + "px";
+      ctx.setTransform(S.dpr,0,0,S.dpr,0,0);
+
+      // ✅ Buffer does NOT use DPR (prevents sampling artifacts / “grid” pixels)
+      // Render buffer in its own pixel space
+      buf.width  = Math.floor(S.w * S.scale);
+      buf.height = Math.floor(S.h * S.scale);
+      btx.setTransform(1,0,0,1,0,0);
+
+      // store for step()
+      S.bw = buf.width;
+      S.bh = buf.height;
+
+      // Quality hints
+      ctx.imageSmoothingEnabled = true;
+      ctx.imageSmoothingQuality = "high";
+      btx.imageSmoothingEnabled = true;
+      btx.imageSmoothingQuality = "high";
+
+      // clear
+      btx.fillStyle = "rgba(0,0,0,1)";
+      btx.fillRect(0,0,S.bw,S.bh);
+      ctx.clearRect(0,0,S.w,S.h);
+    }
+    window.addEventListener("resize", resize, { passive:true });
     resize();
-  });
 
-  const S = {
-    w:0, h:0,
-    dpr: Math.max(1, Math.min(2, window.devicePixelRatio || 1)),
-    t:0,
+    window.addEventListener("pointermove", (e)=>{
+      S.mx = (e.clientX / S.w) * 2 - 1;
+      S.my = (e.clientY / S.h) * 2 - 1;
+    }, { passive:true });
 
-    speed: 0.0046,
+    const clamp=(v,min,max)=>Math.max(min,Math.min(max,v));
 
-    scale: 0.70,
-    mobileScale: 0.98,  // higher = smoother, “premium” blur
-
-    fade: 0.22,
-    glow: 0.25,
-    density: 0.66,
-
-    amp: 0.16,
-    drift: 0.16,
-    band: 0.16,
-    breakUp: 1.05,
-
-    // desktop composite
-    blurBase: 10,
-    blurDetail: 4,
-    blurGlow: 14,
-
-    // ✅ mobile composite (much softer blend)
-    mobileBaseBlur: 26,     // main blend
-    mobileGlowBlur: 18,     // bloom
-    mobileDetailAlpha: 0.06, // essentially off (prevents edge re-appearance)
-
-    // ✅ mobile ribbon feather
-    mobileEdgeFeather: 3.4,
-    mobileBandMul: 1.30,
-
-    // ✅ mobile melt pass (buffer->buffer blur to fuse layers)
-    mobileMeltBlur: 6,      // blur applied when re-drawing buf onto itself
-    mobileMeltAlpha: 0.22,  // strength of that fusion
-
-    mx:0, my:0, px:0, py:0
-  };
-
-  function resize(){
-    S.w = Math.floor(window.innerWidth);
-    S.h = Math.floor(window.innerHeight);
-
-    canvas.width  = Math.floor(S.w * S.dpr);
-    canvas.height = Math.floor(S.h * S.dpr);
-    canvas.style.width  = S.w + "px";
-    canvas.style.height = S.h + "px";
-    ctx.setTransform(S.dpr,0,0,S.dpr,0,0);
-
-    const simScale = isMobile ? S.mobileScale : S.scale;
-    buf.width  = Math.floor(S.w * simScale);
-    buf.height = Math.floor(S.h * simScale);
-    btx.setTransform(1,0,0,1,0,0);
-
-    S.bw = buf.width;
-    S.bh = buf.height;
-
-    ctx.imageSmoothingEnabled = true;
-    ctx.imageSmoothingQuality = "high";
-    btx.imageSmoothingEnabled = true;
-    btx.imageSmoothingQuality = "high";
-
-    btx.fillStyle = "rgba(0,0,0,1)";
-    btx.fillRect(0,0,S.bw,S.bh);
-    ctx.clearRect(0,0,S.w,S.h);
-  }
-  window.addEventListener("resize", resize, { passive:true });
-  resize();
-
-  // Desktop only pointer drift (mobile ignores all interaction)
-  window.addEventListener("pointermove", (e)=>{
-    if (isMobile) return;
-    S.mx = (e.clientX / S.w) * 2 - 1;
-    S.my = (e.clientY / S.h) * 2 - 1;
-  }, { passive:true });
-
-  const clamp=(v,min,max)=>Math.max(min,Math.min(max,v));
-
-  function n2(x,y){
-    return Math.sin(x*1.7 + Math.cos(y*1.3)) * Math.cos(y*1.5 + Math.sin(x*1.1));
-  }
-
-  // Desktop puff (unchanged)
-  function puff(x,y,r, colA, colB, a){
-    const g = btx.createRadialGradient(x,y,0, x,y,r);
-    g.addColorStop(0.00, colA.replace("{a}", (0.52*a).toFixed(4)));
-    g.addColorStop(0.38, colB.replace("{a}", (0.46*a).toFixed(4)));
-    g.addColorStop(0.78, colA.replace("{a}", (0.15*a).toFixed(4)));
-    g.addColorStop(1.00, colA.replace("{a}", "0"));
-    btx.fillStyle = g;
-    btx.beginPath();
-    btx.arc(x,y,r,0,Math.PI*2);
-    btx.fill();
-  }
-
-  function ribbonY(u, yBase, amp, phase){
-    const t = S.t;
-    const f1 = Math.sin(t*0.95 + u*6.2 + phase);
-    const f2 = Math.sin(t*0.55 + u*13.0 - phase*0.7);
-    const f3 = Math.sin(t*1.35 + u*3.2);
-    const wave = f1*0.55 + f2*0.30 + f3*0.15;
-    return yBase + wave * amp;
-  }
-
-  // ✅ Mobile solid ribbon (heavily feathered)
-  function drawSolidRibbon(L){
-    const W = S.bw, H = S.bh;
-    const steps = 170;
-
-    const sweep  = (Math.sin(S.t*0.55 + L.phase) * 0.5 + 0.5);
-    const xShift = (sweep * 0.7 + 0.15) * W * L.drift;
-
-    const band = (S.band * H) * S.mobileBandMul;
-
-    const top = new Array(steps+1);
-    const bot = new Array(steps+1);
-
-    for(let i=0;i<=steps;i++){
-      const u = i/steps;
-      const TAIL = 520;
-      const x = u*(W + TAIL*2) - TAIL + xShift;
-      const yC = ribbonY(u, H*L.y, H*L.amp, L.phase);
-
-      const tt = S.t*0.9 + L.phase + u*2.0;
-      const wy = n2(u*3.0 - L.phase, tt*0.7);
-      const thick = band * (0.82 + 0.18*(wy*0.5+0.5));
-
-      top[i] = { x, y: yC - thick*0.58 };
-      bot[i] = { x, y: yC + thick*0.58 };
+    // organic-ish fast noise
+    function n2(x,y){
+      return Math.sin(x*1.7 + Math.cos(y*1.3)) * Math.cos(y*1.5 + Math.sin(x*1.1));
     }
 
-    const c1 = (Math.sin(S.t*0.30 + L.tint)*0.5 + 0.5);
-    const c2 = (Math.cos(S.t*0.24 - L.tint)*0.5 + 0.5);
+    // Airy puff (no bright white hotspot)
+    function puff(x,y,r, colA, colB, a){
+      const g = btx.createRadialGradient(x,y,0, x,y,r);
+      g.addColorStop(0.00, colA.replace("{a}", (0.52*a).toFixed(4)));
+      g.addColorStop(0.38, colB.replace("{a}", (0.46*a).toFixed(4)));
+      g.addColorStop(0.78, colA.replace("{a}", (0.15*a).toFixed(4)));
+      g.addColorStop(1.00, colA.replace("{a}", "0"));
+      btx.fillStyle = g;
+      btx.beginPath();
+      btx.arc(x,y,r,0,Math.PI*2);
+      btx.fill();
+    }
 
-    const rr = Math.floor(84 + 22*c2);
-    const gg = Math.floor(243 - 18*c1);
-    const bb = Math.floor(164 + 34*c1);
+    // Across-screen centerline
+    function ribbonY(u, yBase, amp, phase){
+      const t = S.t;
+      const f1 = Math.sin(t*0.95 + u*6.2 + phase);
+      const f2 = Math.sin(t*0.55 + u*13.0 - phase*0.7);
+      const f3 = Math.sin(t*1.35 + u*3.2);
+      const wave = f1*0.55 + f2*0.30 + f3*0.15;
+      return yBase + wave * amp;
+    }
 
-    // slightly higher alpha, then we melt it later
-    const a = clamp(0.040 * S.density * L.strength, 0.020, 0.13);
+    function step(){
+      S.t += S.speed;
 
-    btx.save();
-    btx.globalCompositeOperation = "lighter";
-    btx.globalAlpha = a;
-
-    // big feather
-    btx.filter = `blur(${S.mobileEdgeFeather}px)`;
-    btx.fillStyle = `rgba(${rr},${gg},${bb},1)`;
-
-    btx.beginPath();
-    btx.moveTo(top[0].x, top[0].y);
-    for(let i=1;i<=steps;i++) btx.lineTo(top[i].x, top[i].y);
-    for(let i=steps;i>=0;i--) btx.lineTo(bot[i].x, bot[i].y);
-    btx.closePath();
-    btx.fill();
-
-    btx.filter = "none";
-    btx.restore();
-  }
-
-  function step(){
-    S.t += S.speed;
-
-    if (isMobile) {
-      // ✅ Mobile: absolutely no interaction
-      S.mx = S.my = S.px = S.py = 0;
-    } else {
+      // mouse drift
       S.px += (S.mx - S.px) * 0.03;
       S.py += (S.my - S.py) * 0.03;
-    }
 
-    const W = S.bw, H = S.bh;
+      const W = S.bw;
+      const H = S.bh;
 
-    // trails
-    btx.globalCompositeOperation = "source-over";
-    btx.fillStyle = `rgba(0,0,0,${S.fade})`;
-    btx.fillRect(0,0,W,H);
+      // fade buffer (trails)
+      btx.globalCompositeOperation = "source-over";
+      btx.fillStyle = `rgba(0,0,0,${S.fade})`;
+      btx.fillRect(0,0,W,H);
 
-    const layers = [
-      { y: 0.33, amp: S.amp*0.85, phase: 0.0,  drift:  0.14, tint: 0.0,  strength: 0.92 },
-      { y: 0.56, amp: S.amp*1.05, phase: 1.4,  drift: -0.10, tint: 1.3,  strength: 0.80 },
-      { y: 0.74, amp: S.amp*0.95, phase: 2.25, drift:  0.08, tint: 2.2,  strength: 0.70 }
-    ];
-
-    if (isMobile) {
-      // ✅ Mobile: draw ribbons
-      for(const L of layers) drawSolidRibbon(L);
-
-      // ✅ Mobile MELT pass: re-draw buffer onto itself with blur to fuse layers
-      // (this is what makes them blend together)
-      btx.save();
+      // draw vapor
       btx.globalCompositeOperation = "lighter";
-      btx.globalAlpha = S.mobileMeltAlpha;
-      btx.filter = `blur(${S.mobileMeltBlur}px)`;
-      btx.drawImage(buf, 0, 0);
-      btx.restore();
 
-    } else {
-      // Desktop puff pipeline (unchanged)
-      btx.globalCompositeOperation = "lighter";
+      const layers = [
+        { y: 0.33, amp: S.amp*0.85, phase: 0.0,  drift:  0.14, tint: 0.0,  strength: 0.92 },
+        { y: 0.56, amp: S.amp*1.05, phase: 1.4,  drift: -0.10, tint: 1.3,  strength: 0.80 },
+        { y: 0.74, amp: S.amp*0.95, phase: 2.25, drift:  0.08, tint: 2.2,  strength: 0.70 }
+      ];
 
       for(const L of layers){
         const sweep  = (Math.sin(S.t*0.55 + L.phase) * 0.5 + 0.5);
         const xShift = (sweep * 0.7 + 0.15) * W * L.drift;
 
-        const steps = 120;
+        const steps = 120; // continuous bands across screen
 
         for(let i=0;i<=steps;i++){
           const u = i/steps;
 
-          const TAIL = 520;
+          const TAIL = 520; // <— bigger = longer ends
           const x = u*(W + TAIL*2) - TAIL + xShift + S.px*16;
           const yC = ribbonY(u, H*L.y, H*L.amp, L.phase) + S.py*12;
 
@@ -905,18 +821,21 @@
           const jx = wx * band * 0.36 * S.breakUp;
           const jy = wy * band * 0.30 * S.breakUp;
 
+          // soft color drift; includes #54f3a4 (mint) but avoids too much white
           const c1 = (Math.sin(S.t*0.30 + L.tint + u*2.1)*0.5 + 0.5);
           const c2 = (Math.cos(S.t*0.24 - L.tint + u*1.7)*0.5 + 0.5);
 
-          const A = `rgba(${Math.floor(84 + 22*c2)}, ${Math.floor(243 - 18*c1)}, ${Math.floor(164 + 34*c1)}, {a})`;
+          const A = `rgba(${Math.floor(84 + 22*c2)}, ${Math.floor(243 - 18*c1)}, ${Math.floor(164 + 34*c1)}, {a})`; // mint
           const B = `rgba(${Math.floor(72 + 16*c1)}, ${Math.floor(155 + 120*c2)}, ${Math.floor(125 + 26*c2)}, {a})`;
 
           const end = 0.35 + 0.65 * (1 - Math.pow(Math.abs(u-0.5)*2, 2.2));
 
+          // PASS 1: wide haze sheet (defines long band, still vapor)
           const r1 = clamp(band * (1.18 + 0.35*Math.sin(tt)), 52, 220);
           const a1 = (0.010 + 0.010*c1) * S.density * L.strength * (0.40 + 0.60*end);
           puff(x, yC, r1, A, B, a1);
 
+          // PASS 2: wisps / inner turbulence
           const r2 = clamp(r1*0.40, 20, 88);
           const a2 = a1 * 0.78;
           puff(x + jx, yC + jy, r2, B, A, a2);
@@ -926,48 +845,26 @@
           puff(x + jx*0.45, yC - off*0.30, r2*0.72, B, A, a2*0.46);
         }
 
+        // super soft background volume (very low alpha)
         const hx = W*0.5 + Math.sin(S.t*0.28 + L.phase)*W*0.12 + S.px*10;
         const hy = H*L.y + Math.cos(S.t*0.26 - L.phase)*H*0.10 + S.py*8;
         puff(hx, hy, Math.hypot(W,H)*0.22, "rgba(84,243,164,{a})", "rgba(170,110,255,{a})", 0.009*S.density);
       }
-    }
 
-    btx.globalCompositeOperation = "source-over";
+      btx.globalCompositeOperation = "source-over";
 
-    // composite to main
-    ctx.globalCompositeOperation = "source-over";
-    ctx.clearRect(0,0,S.w,S.h);
+      // ✅ Pixel-killing composite: blur the buffer as we upscale
+      ctx.globalCompositeOperation = "source-over";
+      ctx.clearRect(0,0,S.w,S.h);
 
-    if (isMobile) {
-      // ✅ Mobile: big base blur + tiny detail
-      ctx.save();
-      ctx.filter = `blur(${S.mobileBaseBlur}px)`;
-      ctx.globalAlpha = 1;
-      ctx.drawImage(buf, 0, 0, W, H, 0, 0, S.w, S.h);
-      ctx.restore();
-
-      ctx.save();
-      ctx.filter = `blur(${12}px)`;
-      ctx.globalCompositeOperation = "lighter";
-      ctx.globalAlpha = S.mobileDetailAlpha;
-      ctx.drawImage(buf, 0, 0, W, H, 0, 0, S.w, S.h);
-      ctx.restore();
-
-      ctx.save();
-      ctx.filter = `blur(${S.mobileGlowBlur}px)`;
-      ctx.globalCompositeOperation = "lighter";
-      ctx.globalAlpha = S.glow;
-      ctx.drawImage(buf, 0, 0, W, H, 0, 0, S.w, S.h);
-      ctx.restore();
-
-    } else {
-      // Desktop: original 3-pass composite
+      // base pass (soft)
       ctx.save();
       ctx.filter = `blur(${S.blurBase}px)`;
       ctx.globalAlpha = 1;
       ctx.drawImage(buf, 0, 0, W, H, 0, 0, S.w, S.h);
       ctx.restore();
 
+      // detail pass (less blur, still smooth)
       ctx.save();
       ctx.filter = `blur(${S.blurDetail}px)`;
       ctx.globalCompositeOperation = "lighter";
@@ -975,27 +872,28 @@
       ctx.drawImage(buf, 0, 0, W, H, 0, 0, S.w, S.h);
       ctx.restore();
 
+      // glow pass (very soft)
       ctx.save();
       ctx.filter = `blur(${S.blurGlow}px)`;
       ctx.globalCompositeOperation = "lighter";
       ctx.globalAlpha = S.glow;
       ctx.drawImage(buf, 0, 0, W, H, 0, 0, S.w, S.h);
       ctx.restore();
+
+      ctx.globalAlpha = 1;
+      ctx.globalCompositeOperation = "source-over";
+      ctx.filter = "none";
     }
 
-    ctx.globalAlpha = 1;
-    ctx.globalCompositeOperation = "source-over";
-    ctx.filter = "none";
-  }
+    gsap.ticker.fps(60);
+    gsap.ticker.add(step);
 
-  gsap.ticker.fps(60);
-  gsap.ticker.add(step);
-
-  if (window.matchMedia("(prefers-reduced-motion: reduce)").matches) {
-    gsap.ticker.remove(step);
-    for(let i=0;i<20;i++) step();
-  }
-</script>
+    // Reduced motion
+    if (window.matchMedia("(prefers-reduced-motion: reduce)").matches) {
+      gsap.ticker.remove(step);
+      for(let i=0;i<20;i++) step();
+    }
+  </script>
   <script src="app.js"></script>
 </body>
 </html>
