--- a/houston-web-design.html
+++ b/houston-web-design.html
@@ -668,18 +668,12 @@
   </script>
 
 <script>
-  // ✅ Requires GSAP already loaded on the page
-  // Desktop: keeps your original radial-gradient "puff" look (unchanged)
-  // Mobile: replaces the "puffs" with a continuous filled ribbon (no concentric banding rings)
-
   const canvas = document.getElementById("vapor");
   const ctx = canvas.getContext("2d", { alpha: true });
 
-  // Offscreen buffer (we render the sim here, then blur-composite to main)
   const buf = document.createElement("canvas");
   const btx = buf.getContext("2d", { alpha: true });
 
-  // ✅ Mobile detection (real devices + small screens)
   const mqMobile = window.matchMedia("(max-width: 980px), (hover: none) and (pointer: coarse)");
   let isMobile = mqMobile.matches;
   mqMobile.addEventListener?.("change", (e) => {
@@ -692,32 +686,40 @@
     dpr: Math.max(1, Math.min(2, window.devicePixelRatio || 1)),
     t: 0,
 
-    // slow drift
     speed: 0.0046,
 
-    // ✅ sim resolution
-    scale: 0.70,        // desktop
-    mobileScale: 0.90,  // mobile (a bit higher so ribbon is smoother)
+    scale: 0.70,
+    mobileScale: 0.92,
 
     fade: 0.22,
     glow: 0.25,
     density: 0.66,
 
-    // across-screen band behavior
     amp: 0.16,
     drift: 0.16,
     band: 0.16,
     breakUp: 1.05,
 
-    // composite blur
+    // Desktop composite blur (unchanged)
     blurBase: 10,
     blurDetail: 4,
     blurGlow: 14,
 
-    // ✅ Mobile ribbon “solidness”
-    mobileBandMul: 1.15,      // thickness multiplier (solid ribbon feel)
-    mobileEdgeFeather: 3.75,  // tiny blur in buffer space to soften edges
-    mobileWispMul: 0.55,      // optional extra strokes for texture
+    // ✅ Mobile-only airy tuning
+    mobileBandMul: 1.15,
+
+    // feather in BUFFER space (needs to be larger to read as airy once scaled)
+    mobileEdgeFeather: 2.8,     // was 0.75
+
+    // mobile composite recipe (more blend, less edge definition)
+    mobileBlurBase: 18,         // stronger base blur
+    mobileBlurDetail: 8,        // smoother detail blur
+    mobileDetailAlpha: 0.18,    // was effectively 0.55 via hardcoded value
+    mobileGlowBlur: 18,         // softer bloom
+    mobileAirPassAlpha: 0.18,   // extra airy “fog” pass (subtle)
+
+    // optional texture strokes
+    mobileWispMul: 0.35,
 
     mx: 0, my: 0, px: 0, py: 0
   };
@@ -726,30 +728,25 @@
     S.w = Math.floor(window.innerWidth);
     S.h = Math.floor(window.innerHeight);
 
-    // Main canvas uses DPR for sharp UI layers
     canvas.width = Math.floor(S.w * S.dpr);
     canvas.height = Math.floor(S.h * S.dpr);
     canvas.style.width = S.w + "px";
     canvas.style.height = S.h + "px";
     ctx.setTransform(S.dpr, 0, 0, S.dpr, 0, 0);
 
-    // Buffer does NOT use DPR (prevents sampling artifacts)
     const simScale = isMobile ? S.mobileScale : S.scale;
     buf.width = Math.floor(S.w * simScale);
     buf.height = Math.floor(S.h * simScale);
     btx.setTransform(1, 0, 0, 1, 0, 0);
 
-    // store for step()
     S.bw = buf.width;
     S.bh = buf.height;
 
-    // Quality hints
     ctx.imageSmoothingEnabled = true;
     ctx.imageSmoothingQuality = "high";
     btx.imageSmoothingEnabled = true;
     btx.imageSmoothingQuality = "high";
 
-    // clear
     btx.fillStyle = "rgba(0,0,0,1)";
     btx.fillRect(0, 0, S.bw, S.bh);
     ctx.clearRect(0, 0, S.w, S.h);
@@ -757,19 +754,19 @@
   window.addEventListener("resize", resize, { passive: true });
   resize();
 
+  // ✅ Desktop only pointer influence; mobile ignores for a stable airy bg
   window.addEventListener("pointermove", (e) => {
+    if (isMobile) return;
     S.mx = (e.clientX / S.w) * 2 - 1;
     S.my = (e.clientY / S.h) * 2 - 1;
   }, { passive: true });
 
   const clamp = (v, min, max) => Math.max(min, Math.min(max, v));
 
-  // organic-ish fast noise
   function n2(x, y) {
     return Math.sin(x * 1.7 + Math.cos(y * 1.3)) * Math.cos(y * 1.5 + Math.sin(x * 1.1));
   }
 
-  // Desktop puff (your original)
   function puff(x, y, r, colA, colB, a) {
     const g = btx.createRadialGradient(x, y, 0, x, y, r);
     g.addColorStop(0.00, colA.replace("{a}", (0.52 * a).toFixed(4)));
@@ -782,7 +779,6 @@
     btx.fill();
   }
 
-  // Across-screen centerline
   function ribbonY(u, yBase, amp, phase) {
     const t = S.t;
     const f1 = Math.sin(t * 0.95 + u * 6.2 + phase);
@@ -792,7 +788,6 @@
     return yBase + wave * amp;
   }
 
-  // ✅ Mobile-only: continuous filled ribbon (solid, no dots, no banding rings)
   function drawSolidRibbon(L) {
     const W = S.bw, H = S.bh;
     const steps = 140;
@@ -809,10 +804,10 @@
       const u = i / steps;
 
       const TAIL = 520;
-      const x = u * (W + TAIL * 2) - TAIL + xShift + S.px * 16;
-      const yC = ribbonY(u, H * L.y, H * L.amp, L.phase) + S.py * 12;
+      // ✅ on mobile we removed px/py from movement (desktop still uses them via puffs)
+      const x = u * (W + TAIL * 2) - TAIL + xShift;
+      const yC = ribbonY(u, H * L.y, H * L.amp, L.phase);
 
-      // turbulence-driven thickness
       const tt = S.t * 0.9 + L.phase + u * 2.0;
       const wy = n2(u * 3.0 - L.phase, tt * 0.7);
       const thick = band * (0.72 + 0.28 * (wy * 0.5 + 0.5));
@@ -821,7 +816,6 @@
       bot[i] = { x, y: yC + thick * 0.55 };
     }
 
-    // color drift (same palette family)
     const c1 = (Math.sin(S.t * 0.30 + L.tint) * 0.5 + 0.5);
     const c2 = (Math.cos(S.t * 0.24 - L.tint) * 0.5 + 0.5);
 
@@ -829,18 +823,16 @@
     const gg = Math.floor(243 - 18 * c1);
     const bb = Math.floor(164 + 34 * c1);
 
-    // alpha tuned to your density/strength
     const a = clamp(0.030 * S.density * L.strength, 0.012, 0.10);
 
     btx.save();
     btx.globalCompositeOperation = "lighter";
     btx.globalAlpha = a;
 
-    // soften edges in buffer space
+    // ✅ bigger feather = airy ribbon edges
     btx.filter = `blur(${S.mobileEdgeFeather}px)`;
     btx.fillStyle = `rgba(${rr},${gg},${bb},1)`;
 
-    // fill polygon
     btx.beginPath();
     btx.moveTo(top[0].x, top[0].y);
     for (let i = 1; i <= steps; i++) btx.lineTo(top[i].x, top[i].y);
@@ -851,7 +843,7 @@
     btx.filter = "none";
     btx.restore();
 
-    // optional wisps (solid strokes, blurred later by main passes)
+    // optional wisps (kept lighter so it doesn’t sharpen)
     const wispA = a * S.mobileWispMul;
     btx.save();
     btx.globalCompositeOperation = "lighter";
@@ -859,10 +851,10 @@
     btx.lineCap = "round";
     btx.lineJoin = "round";
 
-    for (let k = 0; k < 3; k++) {
-      const off = (k - 1) * band * 0.22;
+    for (let k = 0; k < 2; k++) {
+      const off = (k - 0.5) * band * 0.22;
       btx.strokeStyle = `rgba(${rr},${gg},${bb},1)`;
-      btx.lineWidth = Math.max(2, band * (0.22 - k * 0.04));
+      btx.lineWidth = Math.max(2, band * (0.18 - k * 0.05));
       btx.beginPath();
       btx.moveTo(top[0].x, (top[0].y + bot[0].y) * 0.5 + off);
       for (let i = 1; i <= steps; i++) {
@@ -877,14 +869,17 @@
   function step() {
     S.t += S.speed;
 
-    // mouse drift
-    S.px += (S.mx - S.px) * 0.03;
-    S.py += (S.my - S.py) * 0.03;
+    // ✅ Mobile: no interaction drift, desktop keeps it
+    if (!isMobile) {
+      S.px += (S.mx - S.px) * 0.03;
+      S.py += (S.my - S.py) * 0.03;
+    } else {
+      S.px = S.py = 0;
+    }
 
     const W = S.bw;
     const H = S.bh;
 
-    // fade buffer (trails)
     btx.globalCompositeOperation = "source-over";
     btx.fillStyle = `rgba(0,0,0,${S.fade})`;
     btx.fillRect(0, 0, W, H);
@@ -896,10 +891,8 @@
     ];
 
     if (isMobile) {
-      // ✅ Mobile: solid ribbons (no radial gradients)
       for (const L of layers) drawSolidRibbon(L);
     } else {
-      // ✅ Desktop: original puff logic (unchanged)
       btx.globalCompositeOperation = "lighter";
 
       for (const L of layers) {
@@ -953,28 +946,43 @@
 
     btx.globalCompositeOperation = "source-over";
 
-    // composite to main
     ctx.globalCompositeOperation = "source-over";
     ctx.clearRect(0, 0, S.w, S.h);
 
+    // ✅ Mobile uses different blend recipe (airy)
+    const baseBlur   = isMobile ? S.mobileBlurBase   : S.blurBase;
+    const detailBlur = isMobile ? S.mobileBlurDetail : S.blurDetail;
+    const glowBlur   = isMobile ? S.mobileGlowBlur   : S.blurGlow;
+    const detailA    = isMobile ? S.mobileDetailAlpha : 0.55;
+
     // base pass
     ctx.save();
-    ctx.filter = `blur(${S.blurBase}px)`;
+    ctx.filter = `blur(${baseBlur}px)`;
     ctx.globalAlpha = 1;
     ctx.drawImage(buf, 0, 0, W, H, 0, 0, S.w, S.h);
     ctx.restore();
 
-    // detail pass
+    // detail pass (reduced on mobile so edges don’t pop back)
     ctx.save();
-    ctx.filter = `blur(${S.blurDetail}px)`;
+    ctx.filter = `blur(${detailBlur}px)`;
     ctx.globalCompositeOperation = "lighter";
-    ctx.globalAlpha = 0.55;
+    ctx.globalAlpha = detailA;
     ctx.drawImage(buf, 0, 0, W, H, 0, 0, S.w, S.h);
     ctx.restore();
 
+    // extra “air” pass on mobile only (very soft fog)
+    if (isMobile) {
+      ctx.save();
+      ctx.filter = `blur(${baseBlur + 10}px)`;
+      ctx.globalCompositeOperation = "lighter";
+      ctx.globalAlpha = S.mobileAirPassAlpha;
+      ctx.drawImage(buf, 0, 0, W, H, 0, 0, S.w, S.h);
+      ctx.restore();
+    }
+
     // glow pass
     ctx.save();
-    ctx.filter = `blur(${S.blurGlow}px)`;
+    ctx.filter = `blur(${glowBlur}px)`;
     ctx.globalCompositeOperation = "lighter";
     ctx.globalAlpha = S.glow;
     ctx.drawImage(buf, 0, 0, W, H, 0, 0, S.w, S.h);
@@ -988,7 +996,6 @@
   gsap.ticker.fps(60);
   gsap.ticker.add(step);
 
-  // Reduced motion
   if (window.matchMedia("(prefers-reduced-motion: reduce)").matches) {
     gsap.ticker.remove(step);
     for (let i = 0; i < 20; i++) step();
