matomo tracker analytics

--- a/services.html
+++ b/services.html
@@ -270,6 +270,21 @@
       }
     }
   </style>
+  <!-- Matomo -->
+<script>
+  var _paq = window._paq = window._paq || [];
+  /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+  _paq.push(['trackPageView']);
+  _paq.push(['enableLinkTracking']);
+  (function() {
+    var u="https://magnaflow.matomo.cloud/";
+    _paq.push(['setTrackerUrl', u+'matomo.php']);
+    _paq.push(['setSiteId', '3']);
+    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+    g.async=true; g.src='https://cdn.matomo.cloud/magnaflow.matomo.cloud/matomo.js'; s.parentNode.insertBefore(g,s);
+  })();
+</script>
+<!-- End Matomo Code -->
 
 </head>
 
@@ -2485,7 +2500,7 @@ BOX ANIMATIONS GSAP SHAPES*/
 
     <!-- Bottom -->
     <div class="footer-bottom">
-      <p class="footer-copy">© 2025 MCVDesign. All rights reserved.</p>
+      <p class="footer-copy">© 2026 MCVDesign. All rights reserved.</p>
       <div class="footer-bottom-links">
         <a class="footer-link small" href="/privacy.html">Privacy</a>
         <a class="footer-link small" href="/terms.html">Terms</a>
