--- a/houston-web-design.html
+++ b/houston-web-design.html
@@ -668,75 +668,64 @@
   </script>
 
 <script>
+  
   const canvas = document.getElementById("vapor");
   const ctx = canvas.getContext("2d", { alpha: true });
 
+  // Offscreen buffer (render sim here, then blur-composite to main)
   const buf = document.createElement("canvas");
   const btx = buf.getContext("2d", { alpha: true });
 
-  const mqMobile = window.matchMedia("(max-width: 980px), (hover: none) and (pointer: coarse)");
-  let isMobile = mqMobile.matches;
-  mqMobile.addEventListener?.("change", (e) => {
-    isMobile = e.matches;
-    resize();
-  });
-
   const S = {
     w: 0, h: 0,
+    bw: 0, bh: 0,
     dpr: Math.max(1, Math.min(2, window.devicePixelRatio || 1)),
     t: 0,
 
+    // slow drift
     speed: 0.0046,
 
+    // sim resolution
     scale: 0.70,
-    mobileScale: 0.92,
 
+    // trails / presence
     fade: 0.22,
     glow: 0.25,
     density: 0.66,
 
+    // across-screen band behavior
     amp: 0.16,
     drift: 0.16,
     band: 0.16,
     breakUp: 1.05,
 
-    // Desktop composite blur (unchanged)
+    // composite blur
     blurBase: 10,
     blurDetail: 4,
     blurGlow: 14,
 
-    // ✅ Mobile-only airy tuning
-    mobileBandMul: 1.15,
-
-    // feather in BUFFER space (needs to be larger to read as airy once scaled)
-    mobileEdgeFeather: 2.8,     // was 0.75
-
-    // mobile composite recipe (more blend, less edge definition)
-    mobileBlurBase: 18,         // stronger base blur
-    mobileBlurDetail: 8,        // smoother detail blur
-    mobileDetailAlpha: 0.18,    // was effectively 0.55 via hardcoded value
-    mobileGlowBlur: 18,         // softer bloom
-    mobileAirPassAlpha: 0.18,   // extra airy “fog” pass (subtle)
-
-    // optional texture strokes
-    mobileWispMul: 0.35,
-
-    mx: 0, my: 0, px: 0, py: 0
+    // mouse drift
+    mx: 0, my: 0, px: 0, py: 0,
   };
+
+  const clamp = (v, min, max) => Math.max(min, Math.min(max, v));
 
   function resize() {
     S.w = Math.floor(window.innerWidth);
     S.h = Math.floor(window.innerHeight);
 
+    S.dpr = Math.max(1, Math.min(2, window.devicePixelRatio || 1));
+
+    // main canvas
     canvas.width = Math.floor(S.w * S.dpr);
     canvas.height = Math.floor(S.h * S.dpr);
     canvas.style.width = S.w + "px";
     canvas.style.height = S.h + "px";
     ctx.setTransform(S.dpr, 0, 0, S.dpr, 0, 0);
 
-    const simScale = isMobile ? S.mobileScale : S.scale;
-    buf.width = Math.floor(S.w * simScale);
-    buf.height = Math.floor(S.h * simScale);
+    // sim buffer (no DPR)
+    buf.width = Math.floor(S.w * S.scale);
+    buf.height = Math.floor(S.h * S.scale);
     btx.setTransform(1, 0, 0, 1, 0, 0);
 
     S.bw = buf.width;
@@ -747,21 +736,19 @@
     btx.imageSmoothingEnabled = true;
     btx.imageSmoothingQuality = "high";
 
+    // clear
     btx.fillStyle = "rgba(0,0,0,1)";
     btx.fillRect(0, 0, S.bw, S.bh);
     ctx.clearRect(0, 0, S.w, S.h);
   }
+
   window.addEventListener("resize", resize, { passive: true });
   resize();
 
-  // ✅ Desktop only pointer influence; mobile ignores for a stable airy bg
   window.addEventListener("pointermove", (e) => {
-    if (isMobile) return;
     S.mx = (e.clientX / S.w) * 2 - 1;
     S.my = (e.clientY / S.h) * 2 - 1;
   }, { passive: true });
-
-  const clamp = (v, min, max) => Math.max(min, Math.min(max, v));
 
   function n2(x, y) {
     return Math.sin(x * 1.7 + Math.cos(y * 1.3)) * Math.cos(y * 1.5 + Math.sin(x * 1.1));
@@ -788,201 +775,102 @@
     return yBase + wave * amp;
   }
 
-  function drawSolidRibbon(L) {
-    const W = S.bw, H = S.bh;
-    const steps = 140;
-
-    const sweep = (Math.sin(S.t * 0.55 + L.phase) * 0.5 + 0.5);
-    const xShift = (sweep * 0.7 + 0.15) * W * L.drift;
-
-    const band = (S.band * H) * S.mobileBandMul;
-
-    const top = new Array(steps + 1);
-    const bot = new Array(steps + 1);
-
-    for (let i = 0; i <= steps; i++) {
-      const u = i / steps;
-
-      const TAIL = 520;
-      // ✅ on mobile we removed px/py from movement (desktop still uses them via puffs)
-      const x = u * (W + TAIL * 2) - TAIL + xShift;
-      const yC = ribbonY(u, H * L.y, H * L.amp, L.phase);
-
-      const tt = S.t * 0.9 + L.phase + u * 2.0;
-      const wy = n2(u * 3.0 - L.phase, tt * 0.7);
-      const thick = band * (0.72 + 0.28 * (wy * 0.5 + 0.5));
-
-      top[i] = { x, y: yC - thick * 0.55 };
-      bot[i] = { x, y: yC + thick * 0.55 };
-    }
-
-    const c1 = (Math.sin(S.t * 0.30 + L.tint) * 0.5 + 0.5);
-    const c2 = (Math.cos(S.t * 0.24 - L.tint) * 0.5 + 0.5);
-
-    const rr = Math.floor(84 + 22 * c2);
-    const gg = Math.floor(243 - 18 * c1);
-    const bb = Math.floor(164 + 34 * c1);
-
-    const a = clamp(0.030 * S.density * L.strength, 0.012, 0.10);
-
-    btx.save();
-    btx.globalCompositeOperation = "lighter";
-    btx.globalAlpha = a;
-
-    // ✅ bigger feather = airy ribbon edges
-    btx.filter = `blur(${S.mobileEdgeFeather}px)`;
-    btx.fillStyle = `rgba(${rr},${gg},${bb},1)`;
-
-    btx.beginPath();
-    btx.moveTo(top[0].x, top[0].y);
-    for (let i = 1; i <= steps; i++) btx.lineTo(top[i].x, top[i].y);
-    for (let i = steps; i >= 0; i--) btx.lineTo(bot[i].x, bot[i].y);
-    btx.closePath();
-    btx.fill();
-
-    btx.filter = "none";
-    btx.restore();
-
-    // optional wisps (kept lighter so it doesn’t sharpen)
-    const wispA = a * S.mobileWispMul;
-    btx.save();
-    btx.globalCompositeOperation = "lighter";
-    btx.globalAlpha = wispA;
-    btx.lineCap = "round";
-    btx.lineJoin = "round";
-
-    for (let k = 0; k < 2; k++) {
-      const off = (k - 0.5) * band * 0.22;
-      btx.strokeStyle = `rgba(${rr},${gg},${bb},1)`;
-      btx.lineWidth = Math.max(2, band * (0.18 - k * 0.05));
-      btx.beginPath();
-      btx.moveTo(top[0].x, (top[0].y + bot[0].y) * 0.5 + off);
-      for (let i = 1; i <= steps; i++) {
-        const yy = (top[i].y + bot[i].y) * 0.5 + off;
-        btx.lineTo(top[i].x, yy);
-      }
-      btx.stroke();
-    }
-    btx.restore();
-  }
-
   function step() {
     S.t += S.speed;
 
-    // ✅ Mobile: no interaction drift, desktop keeps it
-    if (!isMobile) {
-      S.px += (S.mx - S.px) * 0.03;
-      S.py += (S.my - S.py) * 0.03;
-    } else {
-      S.px = S.py = 0;
-    }
+    // mouse drift (smooth)
+    S.px += (S.mx - S.px) * 0.03;
+    S.py += (S.my - S.py) * 0.03;
 
     const W = S.bw;
     const H = S.bh;
 
+    // fade buffer (trails)
     btx.globalCompositeOperation = "source-over";
     btx.fillStyle = `rgba(0,0,0,${S.fade})`;
     btx.fillRect(0, 0, W, H);
 
+    // draw vapor
+    btx.globalCompositeOperation = "lighter";
+
     const layers = [
-      { y: 0.33, amp: S.amp * 0.85, phase: 0.0,  drift:  0.14, tint: 0.0,  strength: 0.92 },
-      { y: 0.56, amp: S.amp * 1.05, phase: 1.4,  drift: -0.10, tint: 1.3,  strength: 0.80 },
-      { y: 0.74, amp: S.amp * 0.95, phase: 2.25, drift:  0.08, tint: 2.2,  strength: 0.70 }
+      { y: 0.33, amp: S.amp * 0.85, phase: 0.0,  drift:  0.14, tint: 0.0, strength: 0.92 },
+      { y: 0.56, amp: S.amp * 1.05, phase: 1.4,  drift: -0.10, tint: 1.3, strength: 0.80 },
+      { y: 0.74, amp: S.amp * 0.95, phase: 2.25, drift:  0.08, tint: 2.2, strength: 0.70 }
     ];
 
-    if (isMobile) {
-      for (const L of layers) drawSolidRibbon(L);
-    } else {
-      btx.globalCompositeOperation = "lighter";
+    for (const L of layers) {
+      const sweep  = (Math.sin(S.t * 0.55 + L.phase) * 0.5 + 0.5);
+      const xShift = (sweep * 0.7 + 0.15) * W * L.drift;
 
-      for (const L of layers) {
-        const sweep = (Math.sin(S.t * 0.55 + L.phase) * 0.5 + 0.5);
-        const xShift = (sweep * 0.7 + 0.15) * W * L.drift;
+      const steps = 120;
 
-        const steps = 120;
+      for (let i = 0; i <= steps; i++) {
+        const u = i / steps;
 
-        for (let i = 0; i <= steps; i++) {
-          const u = i / steps;
+        const TAIL = 520;
+        const x = u * (W + TAIL * 2) - TAIL + xShift + S.px * 16;
+        const yC = ribbonY(u, H * L.y, H * L.amp, L.phase) + S.py * 12;
 
-          const TAIL = 520;
-          const x = u * (W + TAIL * 2) - TAIL + xShift + S.px * 16;
-          const yC = ribbonY(u, H * L.y, H * L.amp, L.phase) + S.py * 12;
+        const band = (S.band * H);
 
-          const band = (S.band * H);
+        const tt = S.t * 0.9 + L.phase + u * 2.0;
+        const wx = n2(tt * 0.8, u * 4.0 + L.phase);
+        const wy = n2(u * 3.0 - L.phase, tt * 0.7);
 
-          const tt = S.t * 0.9 + L.phase + u * 2.0;
-          const wx = n2(tt * 0.8, u * 4.0 + L.phase);
-          const wy = n2(u * 3.0 - L.phase, tt * 0.7);
+        const jx = wx * band * 0.36 * S.breakUp;
+        const jy = wy * band * 0.30 * S.breakUp;
 
-          const jx = wx * band * 0.36 * S.breakUp;
-          const jy = wy * band * 0.30 * S.breakUp;
+        const c1 = (Math.sin(S.t * 0.30 + L.tint + u * 2.1) * 0.5 + 0.5);
+        const c2 = (Math.cos(S.t * 0.24 - L.tint + u * 1.7) * 0.5 + 0.5);
 
-          const c1 = (Math.sin(S.t * 0.30 + L.tint + u * 2.1) * 0.5 + 0.5);
-          const c2 = (Math.cos(S.t * 0.24 - L.tint + u * 1.7) * 0.5 + 0.5);
+        const A = `rgba(${Math.floor(84 + 22 * c2)}, ${Math.floor(243 - 18 * c1)}, ${Math.floor(164 + 34 * c1)}, {a})`;
+        const B = `rgba(${Math.floor(72 + 16 * c1)}, ${Math.floor(155 + 120 * c2)}, ${Math.floor(125 + 26 * c2)}, {a})`;
 
-          const A = `rgba(${Math.floor(84 + 22 * c2)}, ${Math.floor(243 - 18 * c1)}, ${Math.floor(164 + 34 * c1)}, {a})`;
-          const B = `rgba(${Math.floor(72 + 16 * c1)}, ${Math.floor(155 + 120 * c2)}, ${Math.floor(125 + 26 * c2)}, {a})`;
+        const end = 0.35 + 0.65 * (1 - Math.pow(Math.abs(u - 0.5) * 2, 2.2));
 
-          const end = 0.35 + 0.65 * (1 - Math.pow(Math.abs(u - 0.5) * 2, 2.2));
+        const r1 = clamp(band * (1.18 + 0.35 * Math.sin(tt)), 52, 220);
+        const a1 = (0.010 + 0.010 * c1) * S.density * L.strength * (0.40 + 0.60 * end);
+        puff(x, yC, r1, A, B, a1);
 
-          const r1 = clamp(band * (1.18 + 0.35 * Math.sin(tt)), 52, 220);
-          const a1 = (0.010 + 0.010 * c1) * S.density * L.strength * (0.40 + 0.60 * end);
-          puff(x, yC, r1, A, B, a1);
+        const r2 = clamp(r1 * 0.40, 20, 88);
+        const a2 = a1 * 0.78;
+        puff(x + jx, yC + jy, r2, B, A, a2);
 
-          const r2 = clamp(r1 * 0.40, 20, 88);
-          const a2 = a1 * 0.78;
-          puff(x + jx, yC + jy, r2, B, A, a2);
-
-          const off = (wy * 0.5 + 0.5) * band * 0.90;
-          puff(x - jx * 0.55, yC + off * 0.32, r2 * 0.78, A, B, a2 * 0.50);
-          puff(x + jx * 0.45, yC - off * 0.30, r2 * 0.72, B, A, a2 * 0.46);
-        }
-
-        const hx = W * 0.5 + Math.sin(S.t * 0.28 + L.phase) * W * 0.12 + S.px * 10;
-        const hy = H * L.y + Math.cos(S.t * 0.26 - L.phase) * H * 0.10 + S.py * 8;
-        puff(hx, hy, Math.hypot(W, H) * 0.22, "rgba(84,243,164,{a})", "rgba(170,110,255,{a})", 0.009 * S.density);
+        const off = (wy * 0.5 + 0.5) * band * 0.90;
+        puff(x - jx * 0.55, yC + off * 0.32, r2 * 0.78, A, B, a2 * 0.50);
+        puff(x + jx * 0.45, yC - off * 0.30, r2 * 0.72, B, A, a2 * 0.46);
       }
+
+      const hx = W * 0.5 + Math.sin(S.t * 0.28 + L.phase) * W * 0.12 + S.px * 10;
+      const hy = H * L.y + Math.cos(S.t * 0.26 - L.phase) * H * 0.10 + S.py * 8;
+      puff(hx, hy, Math.hypot(W, H) * 0.22, "rgba(84,243,164,{a})", "rgba(170,110,255,{a})", 0.009 * S.density);
     }
 
     btx.globalCompositeOperation = "source-over";
 
+    // composite to main
     ctx.globalCompositeOperation = "source-over";
     ctx.clearRect(0, 0, S.w, S.h);
 
-    // ✅ Mobile uses different blend recipe (airy)
-    const baseBlur   = isMobile ? S.mobileBlurBase   : S.blurBase;
-    const detailBlur = isMobile ? S.mobileBlurDetail : S.blurDetail;
-    const glowBlur   = isMobile ? S.mobileGlowBlur   : S.blurGlow;
-    const detailA    = isMobile ? S.mobileDetailAlpha : 0.55;
-
     // base pass
     ctx.save();
-    ctx.filter = `blur(${baseBlur}px)`;
+    ctx.filter = `blur(${S.blurBase}px)`;
     ctx.globalAlpha = 1;
     ctx.drawImage(buf, 0, 0, W, H, 0, 0, S.w, S.h);
     ctx.restore();
 
-    // detail pass (reduced on mobile so edges don’t pop back)
+    // detail pass
     ctx.save();
-    ctx.filter = `blur(${detailBlur}px)`;
+    ctx.filter = `blur(${S.blurDetail}px)`;
     ctx.globalCompositeOperation = "lighter";
-    ctx.globalAlpha = detailA;
+    ctx.globalAlpha = 0.55;
     ctx.drawImage(buf, 0, 0, W, H, 0, 0, S.w, S.h);
     ctx.restore();
 
-    // extra “air” pass on mobile only (very soft fog)
-    if (isMobile) {
-      ctx.save();
-      ctx.filter = `blur(${baseBlur + 10}px)`;
-      ctx.globalCompositeOperation = "lighter";
-      ctx.globalAlpha = S.mobileAirPassAlpha;
-      ctx.drawImage(buf, 0, 0, W, H, 0, 0, S.w, S.h);
-      ctx.restore();
-    }
-
     // glow pass
     ctx.save();
-    ctx.filter = `blur(${glowBlur}px)`;
+    ctx.filter = `blur(${S.blurGlow}px)`;
     ctx.globalCompositeOperation = "lighter";
     ctx.globalAlpha = S.glow;
     ctx.drawImage(buf, 0, 0, W, H, 0, 0, S.w, S.h);
@@ -993,14 +881,17 @@
     ctx.filter = "none";
   }
 
-  gsap.ticker.fps(60);
-  gsap.ticker.add(step);
-
-  if (window.matchMedia("(prefers-reduced-motion: reduce)").matches) {
-    gsap.ticker.remove(step);
-    for (let i = 0; i < 20; i++) step();
+  // Use rAF (no GSAP dependency here)
+  function loop() {
+    if (window.matchMedia("(prefers-reduced-motion: reduce)").matches) return;
+    step();
+    requestAnimationFrame(loop);
   }
+  requestAnimationFrame(loop);
 </script>
+
+
+
   <script src="app.js"></script>
 </body>
 </html>
