--- a/index.html
+++ b/index.html
@@ -34,6 +34,22 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/Draggable.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
   <script src="https://unpkg.com/gsap@3/dist/InertiaPlugin.min.js"></script>
+
+  <!-- Matomo -->
+<script>
+  var _paq = window._paq = window._paq || [];
+  /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+  _paq.push(['trackPageView']);
+  _paq.push(['enableLinkTracking']);
+  (function() {
+    var u="https://magnaflow.matomo.cloud/";
+    _paq.push(['setTrackerUrl', u+'matomo.php']);
+    _paq.push(['setSiteId', '3']);
+    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+    g.async=true; g.src='https://cdn.matomo.cloud/magnaflow.matomo.cloud/matomo.js'; s.parentNode.insertBefore(g,s);
+  })();
+</script>
+<!-- End Matomo Code -->
 </head>
 <body>
   
@@ -124,7 +140,7 @@
         </a>
       </div>
   
-  <div class="dropdown-copyright"><h2>Copyright © 2025</h2></div>
+  <div class="dropdown-copyright"><h2>Copyright © 2026</h2></div>
   <div class="social-button-container">
       <button class="bottom-btn">LinkedIn</button>
       <button class="bottom-btn">Instagram</button>
@@ -794,7 +810,7 @@ function initScrollTrack() {
 
     <!-- Bottom -->
     <div class="footer-bottom">
-      <p class="footer-copy">© 2025 MCVDesign. All rights reserved.</p>
+      <p class="footer-copy">© 2026 MCVDesign. All rights reserved.</p>
       <div class="footer-bottom-links">
         <a class="footer-link small" href="/privacy.html">Privacy</a>
         <a class="footer-link small" href="/terms.html">Terms</a>
