--- a/inquiry.html
+++ b/inquiry.html
@@ -35,6 +35,21 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.css">
 <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.js"></script>
 
+<!-- Matomo -->
+<script>
+  var _paq = window._paq = window._paq || [];
+  /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+  _paq.push(['trackPageView']);
+  _paq.push(['enableLinkTracking']);
+  (function() {
+    var u="https://magnaflow.matomo.cloud/";
+    _paq.push(['setTrackerUrl', u+'matomo.php']);
+    _paq.push(['setSiteId', '3']);
+    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+    g.async=true; g.src='https://cdn.matomo.cloud/magnaflow.matomo.cloud/matomo.js'; s.parentNode.insertBefore(g,s);
+  })();
+</script>
+<!-- End Matomo Code -->
 </head>
 <body>
 <div class="inquiry-notice is-hidden" id="inquiryNotice">
@@ -106,7 +121,7 @@
         </a>
       </div>
   
-  <div class="dropdown-copyright"><h2>Copyright © 2025</h2></div>
+  <div class="dropdown-copyright"><h2>Copyright © 2026</h2></div>
   <div class="social-button-container">
       <button class="bottom-btn">LinkedIn</button>
       <button class="bottom-btn">Instagram</button>
