--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
   <script src="https://unpkg.com/gsap@3/dist/InertiaPlugin.min.js"></script>
 
+  <!-- Privacy-friendly analytics by Plausible -->
+<script async src="https://plausible.io/js/pa-IkaRULBagva-8JC6wIjMP.js"></script>
+<script>
+  window.plausible=window.plausible||function(){(plausible.q=plausible.q||[]).push(arguments)},plausible.init=plausible.init||function(i){plausible.o=i||{}};
+  plausible.init()
+</script>
+
+
   <!-- Matomo -->
 <script>
   var _paq = window._paq = window._paq || [];
