--- a/carlos3.html
+++ b/carlos3.html
@@ -8,7 +8,7 @@
     <!-- GIF COLUMN -->
     <td style="margin:0; padding:0;">
       <img
-        src="images/Carlos3.gif"
+        src="https://mcvdesign.com/images/Carlos3.gif"
         alt=""
         width="420"
         height="200"
@@ -21,7 +21,7 @@
     <!-- TEXT IMAGE COLUMN -->
     <td valign="middle" style="margin:0; padding:0;">
       <img
-        src="images/CarlosText.png"
+        src="https://mcvdesign.com/images/CarlosText.png"
         alt=""
         width="378"
         style="display:block; border:0; outline:none; text-decoration:none;"
@@ -110,7 +110,7 @@
   <tr>
     <td colspan="7" style="padding-top:10px;">
       <img
-        src="/images/logos1.png"
+        src="https://mcvdesign.com/images/logos1.png"
         width="854"
         style="display:block; border:0; outline:none; text-decoration:none;"
         alt=""
