--- a/carlos3.html
+++ b/carlos3.html
@@ -35,7 +35,7 @@
     <td style="padding:0; margin:0;">
       <img
         src="https://mcvdesign.com/images/divider-1px.png"
-        width="1"
+        width="2"
         height="200"
         style="display:block; border:0; outline:none; text-decoration:none;"
         alt=""
@@ -62,7 +62,7 @@
 
         <tr>
           <td style="padding-bottom:18px;">
-            <a href="https://instagram.com/yourcompany">
+            <a href="https://www.instagram.com/royaltyinsurance/">
               <img src="https://mcvdesign.com/images/social2.png"
                    width="24"
                    height="24"
@@ -74,7 +74,7 @@
 
         <tr>
           <td style="padding-bottom:18px;">
-            <a href="https://twitter.com/yourcompany">
+            <a href="https://x.com/royaltyins">
               <img src="https://mcvdesign.com/images/social3.png"
                    width="24"
                    height="24"
