--- a/carlos.html
+++ b/carlos.html
@@ -8,7 +8,7 @@
     <!-- GIF COLUMN -->
     <td style="margin:0; padding:0;">
       <img
-        src="images/bradleygif.gif"
+        src="images/bradgif.gif"
         alt=""
         width="290"
         height="139"
