services page circle update

--- a/carlos.html
+++ b/carlos.html
@@ -8,9 +8,9 @@
     <!-- GIF COLUMN -->
     <td style="margin:0; padding:0;">
       <img
-        src="images/bradgif.gif"
+        src="images/brad-ezgif.com-resize2.gif"
         alt=""
-        width="290"
+        width="291"
         height="139"
         style="display:block; border:0; outline:none; text-decoration:none;"
       >
