--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Funnel+Display:wght@300..800&family=Funnel+Sans:ital,wght@0,300..800;1,300..800&family=Inter:wght@100..900&family=MuseoModerno:wght@100..900&family=Roboto:wght@100..900&family=Smooch&family=Vampiro+One&display=swap" rel="stylesheet">
+  <link rel="canonical" href="https://mcvdesign.com/">
 
   <!-- Styles -->
   <link rel="stylesheet" href="styles.css" />
